--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bar"
     tools:context=".ui.list.view.CharacterListFragment">
 
    <androidx.recyclerview.widget.RecyclerView
